pod-with-config.yaml
apiVersion: v1
kind: Pod
metadata:
    name: data-test-pod
spec:
    containers:
        -   name: test-container
            image: k8s.gcr.io/busybox
            command: ["/bin/sh", "-c", "env"]
    restartPolicy: Never
