expose-daemonset.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-daemonset
spec:
  selector:
    app: nginx-demo-daemonset
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
